<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- =========================================================
         Spring Boot Parent
         ========================================================= -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.7</version>
        <relativePath/>
    </parent>

    <!-- =========================================================
         Project Information
         ========================================================= -->
    <groupId>com.nextcart</groupId>
    <artifactId>nextcart-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>NextCart Backend</name>
    <description>E-commerce platform backend</description>

    <!-- =========================================================
         Project Properties
         ========================================================= -->
    <properties>

        <!-- Java -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Security-patched PostgreSQL JDBC Driver -->
        <postgresql.version>42.7.13</postgresql.version>

        <!-- Security-patched Tomcat -->
        <tomcat.version>11.0.26</tomcat.version>

        <!-- Secure OkHttp version for Razorpay SDK -->
        <okhttp.version>4.12.0</okhttp.version>

    </properties>

    <!-- =========================================================
         Dependencies
         ========================================================= -->
    <dependencies>

        <!-- =====================================================
             Swagger / OpenAPI
             ===================================================== -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>3.0.3</version>
        </dependency>

        <!-- =====================================================
             Spring Boot Web
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- =====================================================
             Spring Dotenv
             ===================================================== -->
        <dependency>
            <groupId>me.paulschwarz</groupId>
            <artifactId>springboot4-dotenv</artifactId>
            <version>5.1.0</version>
        </dependency>

        <!-- =====================================================
             Spring Data JPA
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- =====================================================
             Spring Security
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- =====================================================
             Validation
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- =====================================================
             PostgreSQL Driver
             ===================================================== -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- =====================================================
             JWT API
             ===================================================== -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.12.3</version>
        </dependency>

        <!-- =====================================================
             JWT Implementation
             ===================================================== -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.3</version>
            <scope>runtime</scope>
        </dependency>

        <!-- =====================================================
             JWT Jackson
             ===================================================== -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.3</version>
            <scope>runtime</scope>
        </dependency>

        <!-- =====================================================
             ModelMapper
             ===================================================== -->
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>3.2.0</version>
        </dependency>

        <!-- =====================================================
             Lombok
             ===================================================== -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- =====================================================
             DevTools
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- =====================================================
             Testing
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- =====================================================
             Email / Gmail SMTP
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>

        <!-- =====================================================
             Razorpay Java SDK
             ===================================================== -->
        <dependency>
            <groupId>com.razorpay</groupId>
            <artifactId>razorpay-java</artifactId>
            <version>1.4.10</version>
        </dependency>

        <!-- =====================================================
             Secure OkHttp Override
             Razorpay 1.4.10 brings OkHttp 3.10.0.
             These explicit dependencies force the patched version.
             ===================================================== -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>logging-interceptor</artifactId>
            <version>${okhttp.version}</version>
        </dependency>

        <!-- =====================================================
             Spring Security Testing
             ===================================================== -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- =========================================================
         Build Configuration
         ========================================================= -->
    <build>

        <plugins>

            <!-- =================================================
                 Spring Boot Maven Plugin
                 ================================================= -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>

                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>

            </plugin>

            <!-- =================================================
                 Maven Compiler Plugin
                 ================================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>

                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <parameters>true</parameters>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>

                </configuration>

            </plugin>

        </plugins>

    </build>

</project>